@@ -1,3 +1,9 @@
+2008-08-26 Mathieu Blondel <mblondel@svn.gnome.org>
+
+    * lib/fantasdic/preferences.rb: Include the name of the dictionary in the
+    configuration hash.
+    * test/test_preferences.rb: Updated accordingly.
+
 2008-08-25 Mathieu Blondel <mblondel@svn.gnome.org>
 
     * lib/fantasdic/ui/main_app.rb: When right-clicking on a selected word,
